# ScreenStreamer

./: .replit  build_instructions.txt  pyproject.toml  replit.md  requirements.txt  screen_recorder.py  usage_instructions.txt
.github/workflows/: build-windows.yml
