[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "moviepy>=2.2.1",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.16.0",
]
